[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scenes/enemies/sun.gd" type="Script" id=1]
[ext_resource path="res://GFX/Enemies/sun1.png" type="Texture" id=2]
[ext_resource path="res://GFX/Enemies/sun2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]

resource/name = "move"
length = 20.0
loop = true
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4, 6, 14, 16 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -500, 0 ), Vector2( -500, 0 ), Vector2( 500, 0 ), Vector2( 500, 0 ) ]
}

[node name="sun" type="Node2D"]

script/script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="anim_move" type="AnimationPlayer" parent="sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/move = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="RayCast2D" type="RayCast2D" parent="sprite"]

enabled = true
cast_to = Vector2( 0, 1200 )
layer_mask = 2
type_mask = 15

[node name="Particles2D" type="Particles2D" parent="sprite"]

visibility/opacity = 0.5
z/z = -1
config/amount = 16
config/lifetime = 1.0
config/process_mode = 1
config/half_extents = Vector2( 100, 100 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 30.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 1, 0.819092, 0.109375, 1 )

[node name="shot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="start_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]

[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]


